# copyedit_ai

./: .cookiecutter.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN-2025-11-10.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  3_question.yaml  config.yaml
.github/workflows/: README.md  docs.yml  release.yaml
docs/: changelog.md  contributing.md  gen_ref_pages.py  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: cli.md  examples.md
plans/: LLM_CONFIG.md  PLANNING.md  PLAN_LLM_PASSTHROUGH-2025-11-12.md  PLAN_PLUGIN_INSTALL-2025-11-22.md  PLAN_REFACTOR-2025-11-13.md  TYPE_CHECKING_FIXES.md
pr_summaries/: PR8.md
src/copyedit_ai/: __init__.py  __main__.py  copyedit.py  logging_config.py  self_subcommand.py  settings.py  user_dir.py
tests/: __init__.py  conftest.py  test_cli.py  test_copyedit.py  test_user_dir.py
