[project]
name = "copyedit_ai"
version = "0.1.0"
description = "Copyedit text from the CLI using AI"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "crossjam", email = "bmd@pirateninja.dev"}]
repository = "https://github.com/crossjam/copyedit_ai"
requires-python = ">=3.11,<4.0"
dependencies = [
    "llm",
    "loguru",
    "typer",
    "pydantic_settings",
    "rich",
    "platformdirs",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Documentation = "https://crossjam.github.io/copyedit_ai/"
Issues = "https://github.com/crossjam/copyedit_ai/issues"
Source = "https://github.com/crossjam/copyedit_ai"


[project.scripts]
copyedit_ai = "copyedit_ai.__main__:cli"
copyedit = "copyedit_ai.__main__:cli"

[build-system]
requires = ["uv_build>=0.7.19,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "toml-cli",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.poe.tasks]

# Code Quality

_generate_coverage = "pytest --cov=./src/copyedit_ai --cov-report=html"
_open_report = "open htmlcov/index.html"
coverage.sequence = [ "_generate_coverage", "_open_report"]
coverage.help = "[Code Quality] Open generated coverage report in a browser."

ty.cmd = "ty check src/copyedit_ai"
ty.help = "[Code Quality] Run ty type checker on source."

ruff-check.cmd = "ruff check src tests"
ruff-check.help = "[Code Quality] Run ruff check on source."

ruff-format.cmd = "ruff format src tests"
ruff-format.help = "[Code Quality] Run ruff format on source."

ruff.sequence = ["ruff-check", "ruff-format"]
ruff.help = "[Code Quality] Run Ruff check and format on source."

check.sequence = [ "ruff", "ty" ]
check.help = "[Code Quality] Run all code quality tools on source."

test.cmd = "pytest"
test.help = "[Code Quality] Runs testing suites using pytest."

qc.sequence = [ "test", "ruff", "ty" ]
qc.help = "[Code Quality] Run all code quality tasks."

# Publish tasks

## update version in pyproject

_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

## add, commit, tag and commit pyproject updated by bump

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = { shell = "git tag v`uv version --short`" }
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

## Publish patch, minor or major releases
## See .github/workflows/release.yaml

publish_patch.sequence = ["_patch_bump", "_update_pyproject"]
publish_patch.help = "[Publish] Patch release."

publish_minor.sequence = ["_minor_bump", "_update_pyproject"]
publish_minor.help = "[Publish] Minor release."

publish_major.sequence = ["_major_bump", "_update_pyproject"]
publish_major.help = "[Publish] Major release."

publish.ref =  "publish_patch"
publish.help = "[Publish] Patch release."

# Release tasks

changelog.shell = "git log --pretty=format:'- %s (%h)' $(git describe --tags --abbrev=0 2>/dev/null || echo 'HEAD')..HEAD"
changelog.help = "[Release] Generate changelog since last tag."

release-notes.shell = "echo '## Release Notes' > RELEASE_NOTES.md && echo '' >> RELEASE_NOTES.md && poe changelog >> RELEASE_NOTES.md"
release-notes.help = "[Release] Generate release notes file."

# Clean

clean.cmd = "rm -rf htmlcov dist copyedit_ai.egg-info *.log"
# clean.cmd = "git clean -f"
clean.help = "[Clean] Remove testing, build and code quality artifacts."

# Misc

tree.cmd = "tree . -a -I .venv -I .git -I .ruff_cache"
tree.help = "List project files in tree format."

# Documentation

docs-serve.cmd = "mkdocs serve"
docs-serve.help = "[Documentation] Serve documentation locally for development."

docs-build.cmd = "mkdocs build"
docs-build.help = "[Documentation] Build documentation for production."

docs-deploy.cmd = "mkdocs gh-deploy"
docs-deploy.help = "[Documentation] Deploy documentation to GitHub Pages."

# Tool Options

[tool.pytest.ini_options]

[tool.ruff]
fix = true
lint.select = [
  # isort
  "I",
  # ok isort is in all.
  "ALL"
]
lint.ignore = [
  # missing-trailing-comma (COM812)
  "COM812",
  # incorrect-blank-line-before-class (D203)
  "D203",
  # blank-line-before-class (D211)
  "D211",
  # multi-line-summary-first-line (D212)
  "D212",
  # multi-line-summary-second-line (D213)
  "D213",
  # boolean-type-hint-positional-argument (FBT001)
  "FBT001",
  # boolean-positional-value-in-call (FBT003)
  "FBT003",
  # missing-trailing-period (D400)
  "D400",
  # first-line-ends-in-period (D415)
  "D415",
  # blank-except (BLE001)
  "BLE001"
 ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  # assert (S101)
  "S101",
  # subprocess-without-shell-equals-true (S603)
  "S603",
  # missing-type-function-argument (ANN001)
  "ANN001",
  # missing-return-type-undocumented-public-function (ANN201)
  "ANN201"
]
"src/copyedit_ai/__main__.py" = [
  # function-call-in-default-argument (B008) - false positive for Typer
  "B008"
]

[tool.ty]

[tool.copyedit_ai.ci]
test-python-versions = 3.14
